# feed-plumber

./: Cargo.toml  sample_config.toml  sample_plugin_sample_config.toml
feed-plumber-plugin-rs/: Cargo.toml
feed-plumber-plugin-rs/src/: de_config.rs  lib.rs  str_config.rs
feed-plumber-service/: Cargo.toml
feed-plumber-service/src/: args.rs  config.rs  main.rs  plugin_loader.rs  sys.rs
plugins/feed-plumber-rss/: Cargo.toml
plugins/feed-plumber-rss/src/: lib.rs
sample-plugin/: Cargo.toml
sample-plugin/src/: lib.rs
sys-feed-plumber-plugin/: Cargo.toml
sys-feed-plumber-plugin/src/: lib.rs
